--- a/v12/en/TutorialManager.html
+++ b/v12/en/TutorialManager.html
@@ -1,107 +1,1 @@
-<!DOCTYPE html>
-
-
-<html class="no-js" lang="en">
- 
-	
-<!-- header::Start -->
-	<head>
-		<!-- Use Internet Explorer 9 Standards mode for Eclipse Browser Control - https://www.eclipse.org/swt/faq.php#browsernativeie and https://msdn.microsoft.com/en-us/library/jj676915%28v=vs.85%29.aspx -->
-  		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-		
-		<meta http-equiv="Pragma" content="no-cache">
-  		<meta http-equiv="Expires" content="-1">
-
-		<meta charset="UTF-8"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-		<meta name="abstract" content="App Connect Enterprise V11 Tutorial">
-		<meta name="author" content="IBM">
-		<meta name="description" content="App Connect Enterprise V11 Tutorial">
-		<meta name="keywords" content="keywords" > 
-		<meta name="robots" content="index,follow">
-		<meta name="source" content="App Connect Enterprise V11 Tutorial" /> 
-		
-		<title>App Connect Enterprise V11 Tutorial</title>
-
-    	        <link rel="stylesheet" href="https://ot4i.github.io/ace-tutorials/css/main.css" />
-		<link rel="stylesheet" href="https://ot4i.github.io/ace-tutorials/css/app.css" />
-    	
-    	        <script src="https://ot4i.github.io/ace-tutorials/js/json2.js"></script>
-    	        <script src="https://ot4i.github.io/ace-tutorials/js/js2java.js"></script>
-  		<script src="https://ot4i.github.io/ace-tutorials/js/vendor/modernizr.js"></script>
-
-	</head>
-<!-- header::End -->
-<!-- body::Start -->
-		<body onload="fillList()">
-  <!-- body content here -->
-  <div class="manager-container">
-  <div class="row">
-    <div class="large-offset-2 large-8 medium-offset-2 medium-8 small-offset-2 small-8 columns">
-		<div class="row">
-			  <h3><img class="icon-image" src="https://ot4i.github.io/ace-tutorials/images/icons/ibmdesign/booklet-guide_128.png"> Tutorial Gallery</h3>
-		</div>
-	</div>
-  </div> 
-
-  <div class="row">
-           <div class="large-offset-2 large-8 medium-offset-2 medium-8 small-offset-2 small-8 columns">
-            <div class="row">
-              <div class="columns">
-                <h5 class="subheader">Here you can explore and learn about App Connect Enterprise using tutorials. <br> What are you interested in? 
-                </h5>
-              </div>
-            </div>
-			<hr>
-            <div class="row"> 
-              <div class="columns">
-
-                <ul class="tabs" id="tutorialCategories"> 
-                  <li class="tab-title tab-title-big active" id="tabCapabilities"> 
-                    <a>Tool Capabilities</a>
-                  </li>
-                </ul>
-                <div class="tabs-content">
-                  <div class="content active" id="panel11">
-                    <div class="row">
-                    <h5 class="subheader text-center tabdescription">Explore App Connect Enterprise concepts by following simple tutorials</h5>
-                    <div>
-                      <select size="46" id="styledSelect_Tool_Capabilities" name="tutorials" onchange="changeFunc('styledSelect_Tool_Capabilities')">
-                      </select>
-                    </div>
-                    <p id="tutorialDesc_styledSelect_Tool_Capabilities">
-                      Please select a tutorial...
-                    </p>
-
-                    <div class="row">
-                      <div class="small-offset-3 small-3 medium-offset-3 medium-3 large-offset-3 large-3 columns text-center">
-                        <action>
-                          <button class="radius button" tabindex="0" id="viewDetails" onclick="viewDetails('styledSelect_Tool_Capabilities')"> View Details
-                          </button>
-                        </action>
-                      </div>
-                      <div class="small-3 medium-3 large-3 columns left text-center">
-                        <action>
-                          <button class="radius button" tabindex="0" id="startTutorial" onclick="startTutorial('styledSelect_Tool_Capabilities')"> Start Tutorial
-                          </button>
-                        </action>
-                      </div>
-                    </div>
-                    <hr>
-                    </div>
-                  </div>
-                </div><!-- Tab content -->
-              </div>
-            </div>
-
-        </div><!-- columns-11 --> 
-      </div><!-- row -->
- </div></body>
-		<script src="https://ot4i.github.io/ace-tutorials/js/vendor/jquery.js"></script>
-		<script src="https://ot4i.github.io/ace-tutorials/js/vendor/foundation.min.js"></script>
-		<script src="https://ot4i.github.io/ace-tutorials/js/main.js"></script>
-	</body>
-<!-- body::End -->
-
-</html>
+<!doctype html><html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><link rel="icon" href="https://www.ibm.com/favicon.ico"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#000000"><title>IBM App Connect Toolkit - Tutorials</title><link href="./static/css/main.49f89969.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,l,i=t[0],f=t[1],a=t[2],c=0,s=[];c<i.length;c++)l=i[c],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in f)Object.prototype.hasOwnProperty.call(f,n)&&(e[n]=f[n]);for(p&&p(t);s.length;)s.shift()();return u.push.apply(u,a||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,i=1;i<r.length;i++){var f=r[i];0!==o[f]&&(n=!1)}n&&(u.splice(t--,1),e=l(l.s=r[0]))}return e}var n={},o={1:0},u=[];function l(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=e,l.c=n,l.d=function(e,t,r){l.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,t){if(1&t&&(e=l(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(l.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)l.d(r,n,function(t){return e[t]}.bind(null,n));return r},l.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(t,"a",t),t},l.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},l.p="./";var i=this["webpackJsonpACE-Toolkit"]=this["webpackJsonpACE-Toolkit"]||[],f=i.push.bind(i);i.push=t,i=i.slice();for(var a=0;a<i.length;a++)t(i[a]);var p=f;r()}([])</script><script src="./static/js/2.9e126b77.chunk.js"></script><script src="./static/js/main.b66d0fc0.chunk.js"></script></body></html>
