--- a/Index2.html
+++ b/Index2.html
@@ -3,16 +3,16 @@
 <body>
 <h1>New Index</h1>
 <p>Welcome</p>
-<button onclick="myFunction()">Click me</button>
+<button onclick="backToGallery()">Click me</button>
 <p id="demo"></p>
 
 <script>
-function myFunction() {
+function backToGallery() {
   document.getElementById("demo").innerHTML = "Hello there :)";
 	   var result = null;
 	   try 
 	   {          
-		   result = javaSetSelectedTutorialFunction( "fixed" );
+		   result = javaBackToGallery();
 	   }
 	   catch(e)
 	   {
