--- a/Index2.html
+++ b/Index2.html
@@ -12,7 +12,7 @@ function backToGallery() {
 	   var result = null;
 	   try 
 	   {          
-		   result = javaBackToGallery();
+		   result = javaBackToGalleryFunction();
 	   }
 	   catch(e)
 	   {
